--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@
 # `jekyll serve`. If you change this file, please restart the server process.
 
 # Site Settings
-title                    : "Jiantao Lin (林坚涛)"
-description              : "MPhil student at HKUST (Guangzhou), supervised by [Prof. Ying-Cong Chen](https://www.yingcong.me/)"
+title                    : "Jiantao Lin(林坚涛)"
+description              : "MPhil student at HKUST (Guangzhou), supervised by Prof. Ying-Cong Chen"
 repository               : "LTT-O/JiantaoLin.github.io"
 google_scholar_stats_use_cdn : true
 
@@ -21,7 +21,7 @@ baidu_site_verification  : code-ZxFK3f4pfb
 
 # Site Author
 author:
-  name             : "Jiantao Lin (林坚涛)"
+  name             : "Jiantao Lin(林坚涛)"
   avatar           : "images/jiantao.JPG"
   bio              : ""
   location         : "China, Guangzhou"
