--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,18 +1,18 @@
 # main links links
 main:
   - title: "About Me"
-    url: "/JiantaoLin.github.io/#-educations"
+    url: "/MeixiChenTracy.github.io/#-educations"
   - title: "News"
-    url: "/JiantaoLin.github.io/#-news"
+    url: "/MeixiChenTracy.github.io/#-news"
 
   - title: "Publications"
-    url: "/JiantaoLin.github.io/#-publications"
+    url: "/MeixiChenTracy.github.io/#-publications"
 
   - title: "Honors and Awards"
-    url: "/JiantaoLin.github.io/#-honors-and-awards"
+    url: "/MeixiChenTracy.github.io/#-honors-and-awards"
 
   - title: "Educations"
-    url: "/JiantaoLin.github.io/#-educations"
+    url: "/MeixiChenTracy.github.io/#-educations"
 
   # - title: "Invited Talks"
   #   url: "/#-invited-talks"
