--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,9 @@ baidu_site_verification  :
 
 # Site Author
 author:
-  name             : "Meixi Chen"
+  name             : "Meixi Chen (陈美羲)"
   avatar           : "images/avatar.jpg"
-  bio              : "(陈美羲)"
+  bio              : ""
   location         : #"China, Guangzhou"
   employer         :
   pubmed           : 
