--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ baidu_site_verification  :
 
 # Site Author
 author:
-  name             : "Meixi Chen (陈美羲)"
+  name             : "Meixi Chen"
   avatar           : "images/avatar.jpg"
   bio              : ""
   location         : #"China, Guangzhou"
